--- a/project.json
+++ b/project.json
@@ -7,6 +7,7 @@
     "UiPath.Database.Activities": "[1.5.0]",
     "UiPath.Excel.Activities": "[2.12.3]",
     "UiPath.Mail.Activities": "[1.12.3]",
+    "UiPath.MicrosoftOffice365.Activities": "[1.14.1]",
     "UiPath.System.Activities": "[22.4.5]",
     "UiPath.UIAutomation.Activities": "[22.10.2]"
   },
